fix error overflow in Historian panel-body - bigger content

--- a/static/historian.css
+++ b/static/historian.css
@@ -174,6 +174,7 @@ rect.level-summary {
 #panel-historian .panel-body {
   padding-left: 4%;
   padding-right: 4%;
+  overflow: auto;
 }
 
 table.values-table td {
